<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_mammalia_label"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_mammalia_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_reptilia_label"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_reptilia_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_alage_label"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_algae_label" />
    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_all_label"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shr_all_label" />

</merge>