<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="204dp"
            android:layout_height="195dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/ic_fox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/shr_app_name"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/shr_app_subName"
            android:textAppearance="@style/TextAppearance.Shrine.Title2" />

        <!-- username text input start -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:text="자동로그인"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autoLoginCheck"
            android:textColor="#FFFFFFFF" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shr_hint_username"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- username text input end -->

        <!-- username text layout start -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shr_hint_password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <!-- android:hint>@string/shr_hint_password" 입력 보조문구 출력-->
            <!-- app:errorEnabled="true" 에러처리 화면을 출력 -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
            <!-- inputType "textPassword 입력 마스킹 처리를 해준다 -->
        </com.google.android.material.textfield.TextInputLayout>
        <!-- username text layout end -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/shr_button_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/next_button"
                android:layout_toLeftOf="@id/next_button"
                android:text="@string/shr_button_cancel" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
