<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProductDetailFragment">

    <LinearLayout
        android:id="@+id/backdrop"
        style="@style/Widget.Shrine.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="88dp">

        <include layout="@layout/shr_backdrop" />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_menu_rabbit"
            app:title="@string/shr_app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="?attr/colorPrimaryDark"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/product_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shr_product_title"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?attr/textAppearanceSubtitle2" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shr_product_description"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?attr/textAppearanceBody2" />
                    <TextView
                        android:id="@+id/product_detail_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shr_product_detail_page"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>